Fix mimimal h1 contrast, generate styles for error pages.

--- a/admin/themes/default/css/sass/pages/_login.scss
+++ b/admin/themes/default/css/sass/pages/_login.scss
@@ -1,4 +1,5 @@
-#login {
+#login, 
+#debug {
 	#content {
 	    margin-top: 10%;
 	    text-align: center;
@@ -49,7 +50,7 @@
 
 	h1 {
 	    width: 100%;
-	    color: #ccc;
+	    color: #939393;
 	    clear: both;
 	    padding: 0;
 	    height: 53px;
